--- a/dckx/fonts/xkcd.css
+++ b/dckx/fonts/xkcd.css
@@ -22,6 +22,13 @@ body {
     background-color: var(--background);
 }
 
+a:link {
+    color: #6E7B91;
+}
+a:visited {
+    color: #96A8c8;
+}
+
 .question {
     font-family: xkcd-script;
     line-height: 150%;
@@ -61,13 +68,6 @@ body {
     
     img {
         background-color: var(--color);
-    }
-    
-    a:link {
-        color: #0096e2;
-    }
-    a:visited {
-        color: #9d57df;
     }
 }
 
