--- a/dckx/fonts/xkcd.css
+++ b/dckx/fonts/xkcd.css
@@ -17,7 +17,7 @@
 body {
     font-family: xkcd;
     line-height: 150%;
-    font-size: 26px;
+    font-size: 28px;
     color: var(--color);
     background-color: var(--background);
 }
@@ -26,13 +26,13 @@ a:link {
     color: #6E7B91;
 }
 a:visited {
-    color: #96A8c8;
+    color: #96A8C8;
 }
 
 .question {
     font-family: xkcd-script;
     line-height: 150%;
-    font-size: 28px;
+    font-size: 30px;
     font-style: italic;
     color: var(--color);
     background-color: var(--background);
@@ -41,7 +41,7 @@ a:visited {
 .questioner {
     font-family: xkcd-script;
     line-height: 150%;
-    font-size: 28px;
+    font-size: 30px;
     color: var(--color);
     background-color: var(--background);
 }
