--- a/dckx/fonts/xkcd.css
+++ b/dckx/fonts/xkcd.css
@@ -29,14 +29,21 @@ a:visited {
     color: #96A8C8;
 }
 
-.image.xkcd {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 500px;
-    height: 500px;
-    margin-top: -250px; /* Half the height */
-    margin-left: -250px; /* Half the width */
+html, body, #wrapper {
+   height:100%;
+   width: 100%;
+   margin: 0;
+   padding: 0;
+   border: 0;
+}
+#wrapper td {
+   vertical-align: middle;
+   text-align: center;
+}
+
+img {
+    width: 100%;
+    height: auto;
 }
 
 .question {
@@ -55,6 +62,13 @@ a:visited {
     color: var(--color);
     background-color: var(--background);
 }
+.altText {
+    font-family: xkcd-script;
+    line-height: 150%;
+    font-size: 40px;
+    color: var(--color);
+    background-color: var(--background);
+}
 
 @media (prefers-color-scheme: dark) {
     :root {
@@ -67,6 +81,12 @@ a:visited {
         background-color: var(--background);
     }
     
+    img {
+        width: 100%;
+        height: auto;
+        background-color: var(--color);
+    }
+    
     .question {
         color: var(--color);
         background-color: var(--background);
@@ -75,20 +95,9 @@ a:visited {
         color: var(--color);
         background-color: var(--background);
     }
-    
-    img {
-        background-color: var(--color);
-    }
-    
-    .image.xkcd {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        width: 500px;
-        height: 500px;
-        margin-top: -250px; /* Half the height */
-        margin-left: -250px; /* Half the width */
-        background-color: var(--color);
+    .altText {
+        color: var(--color);
+        background-color: var(--background);
     }
 }
 
