--- a/dckx/resources/reader.css
+++ b/dckx/resources/reader.css
@@ -29,40 +29,12 @@ ul {
 	position: relative;
 }
 
-.pagenb, .burger, .prev, .menu > ul {
+.prev, .next {
 	z-index: 20;
 	padding: 0.1em 0.4em;
-	background-color: #ffffff;
-	color: #ffffff;
+	background-color: #34495e;
+	color: #ecf0f1;
 	font-weight: bold;
-}
-
-.menu {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-.menu ul {
-	display: flex;
-	flex-direction: column;
-	border: 2px solid #ecf0f1;
-	border-radius: 5px;
-	padding: 2em;
-	font-size: 150%;
-	position: relative;
-}
-.menu .kbd { font-size: 80%; display: flex; justify-content: space-between;}
-.menu .kbd span:nth-child(1) { color: #bdc3c7; margin-right: 1em; }
-.menu .exit {
-	position: absolute;
-	right: 1vmin;
-	top: 1vmin;
-	font-style: normal;
 }
 
 /* Fading corner icons/infos */
@@ -73,38 +45,22 @@ ul {
 	font-size: 6vmin;
 	font-style: normal;
 }
-.burger {
+.next {
 	position: absolute;
 	top: 0;
 	right: 0;
 	font-size: 6vmin;
 	font-style: normal;
 }
-.pagenb {
-	position: absolute;
-	bottom: 0;
-	right: 0;
-}
-.prev, .burger, .pagenb {
+.prev, .next {
 	transition-property: opacity;
 	transition-duration: 2s;
 	opacity: 0.1;
 }
-.prev:active, .burger:active, .pagenb:active {
+.prev:active, .next:active {
 	transition-duration: 0s;
 	opacity: 1;
 }
-
-
-.license {
-	position: absolute;
-	bottom: 0;
-	right: 15%;
-}
-.license a {
-	color: #ecf0f1;
-}
-
 
 /*****  PANELS  *****/
 .panel {
