--- a/dckx/resources/reader.css
+++ b/dckx/resources/reader.css
@@ -9,12 +9,12 @@ body {
 	font-family: sans-serif;
 }
 
-ul {
-	padding: 0;
-	margin: 0;
-	list-style: none;
-}
-
+.center {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100%;
+  }
 
 /*****  CONTAINERS & BUTTONS  *****/
 
@@ -42,13 +42,16 @@ ul {
 	position: absolute;
 	top: 0;
 	left: 0;
+	height: 100%;
 	font-size: 6vmin;
 	font-style: normal;
+	
 }
 .next {
 	position: absolute;
 	top: 0;
 	right: 0;
+	height: 100%;
 	font-size: 6vmin;
 	font-style: normal;
 }
