--- a/dckx/resources/reader.css
+++ b/dckx/resources/reader.css
@@ -37,7 +37,8 @@ body {
 	padding: 1px; /* make sure to see panel borders even for pages with no margin (e.g. xkcd) */
 	overflow: hidden;
 	/* position: relative; */
-	/* display: flex; */
+	display: flex;
+	flex-direction: column;
   	/* justify-content: center; */
   	/* align-items: center; */
 }
@@ -86,6 +87,7 @@ img {
 	font-family: xkcd-script;
     line-height: 150%;
     /* font-size: 40px; */
+	text-align: center;
     color: var(--color);
     background-color: var(--background);
 }
