--- a/dckx/resources/dckx.css
+++ b/dckx/resources/dckx.css
@@ -21,7 +21,6 @@ body {
 	margin-top: 2vh;
 	margin-left: 2vw;
     font-family: xkcd;
-    line-height: 150%;
 	color: var(--color);
     background-color: var(--background);
 }
@@ -58,14 +57,12 @@ img {
 	font-weight: bold;
 }
 
-/* Textx */
+/* Comics */
 .leftText {
 	position: absolute;
 	top: 0;
 	left: 10;
 	font-family: xkcd-script;
-    line-height: 150%;
-/*    font-size: 60px;*/
     color: var(--color);
     background-color: var(--background);
 }
@@ -74,8 +71,6 @@ img {
 	top: 0;
 	right: 0;
 	font-family: xkcd-script;
-    line-height: 150%;
-/*    font-size: 60px;*/
     color: var(--color);
     background-color: var(--background);
 }
@@ -84,6 +79,29 @@ img {
 	bottom: 0;
 	font-family: xkcd-script;
 	text-align: center;
+    color: var(--color);
+    background-color: var(--background);
+}
+
+/ * What If */
+.numdate {
+    font-family: xkcd-script;
+    font-size: 60px;
+    color: var(--color);
+    background-color: var(--background);
+}
+.question {
+    font-family: xkcd-script;
+    font-size: 40px;
+    font-style: italic;
+    font-weight: 700;
+    color: var(--color);
+    background-color: var(--background);
+    
+}
+.questioner, answer {
+    font-family: xkcd-script;
+    font-size: 40px;
     color: var(--color);
     background-color: var(--background);
 }
@@ -123,40 +141,6 @@ img {
 	justify-content: center;
 	align-items: center;
 }
-.kumiko-reader.debug .container:not(.zoomed) .panel {
-	border: 2px solid #3498db;
-	margin-left: -2px;
-	margin-top: -2px;
-}
-.kumiko-reader.debug .container:not(.zoomed) .panel.unknown {
-	border: 4px solid #e74c3c;
-}
-.kumiko-reader.debug .container:not(.zoomed) .panel:hover,
-.kumiko-reader.debug .container:not(.zoomed) .panel:active {
-	background-color: rgba(52,152,219,0.5);
-}
-.kumiko-reader:not(.debug) .container .panel *,
-.kumiko-reader.debug .container.zoomed .panel * {
-	display: none;
-}
-.kumiko-reader.debug .container:not(.zoomed) .panel span {
-	color: #3498db;
-	font-size: 75%;
-	background-color: white;
-	opacity: 0.9;
-	border-radius: 30px;
-	padding: 2px 6px;
-}
-.kumiko-reader.debug .container:not(.zoomed) .panel.unknown span {
-	color: #e74c3c;
-}
-.kumiko-reader.debug .container:not(.zoomed) .panel span.panelnb { font-size: 150%; }
-
-/* Debug show panel edges */
-.kumiko-reader.debug .container:not(.zoomed) .panel span.top     { position: absolute; top: 0;    left: 45%; }
-.kumiko-reader.debug .container:not(.zoomed) .panel span.bottom  { position: absolute; bottom: 0; left: 45%; }
-.kumiko-reader.debug .container:not(.zoomed) .panel span.left    { position: absolute; left: 0;   top: 45%; }
-.kumiko-reader.debug .container:not(.zoomed) .panel span.right   { position: absolute; right: 0;  top: 45%; }
 
 /* Dark Theme */
 @media (prefers-color-scheme: dark) {
@@ -173,7 +157,6 @@ img {
     img {
 		color: var(--color);
         background-color: var(--color);
-		/* filter: invert(100%); */
     }
     
     .leftText {
@@ -185,6 +168,19 @@ img {
         background-color: var(--background);
     }
     .altText {
+        color: var(--color);
+        background-color: var(--background);
+    }
+    
+    .question {
+        color: var(--color);
+        background-color: var(--background);
+    }
+    .questioner {
+        color: var(--color);
+        background-color: var(--background);
+    }
+    .answer {
         color: var(--color);
         background-color: var(--background);
     }
