--- a/dckx/resources/system.css
+++ b/dckx/resources/system.css
@@ -83,7 +83,7 @@ img {
     background-color: var(--background);
 }
 
-/ * What If */
+/* What If */
 .numdate {
     font-family: -apple-system;
     font-size: 60px;
@@ -100,7 +100,7 @@ img {
     background-color: var(--background);
     
 }
-.questioner, answer {
+.questioner, .answer {
     font-family: -apple-system;
     font-size: 40px;
     color: var(--color);
